--- a/PaperLessApi/frontend/src/App.css
+++ b/PaperLessApi/frontend/src/App.css
@@ -14,24 +14,41 @@
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #f05222);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #f05222);
 }
-body{
+
+body {
   background-color: #282b3d;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.links{
+
+.home-page {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+
+.links {
   position: absolute;
-  right:0;
-  top:0;
+  right: 0;
+  top: 0;
   margin-top: 5px;
   margin-right: 10px;
 }
 
-#link{
+#link {
   font-family: 'Courier new';
   font-size: 20px;
   margin-right: 25px;
@@ -42,7 +59,7 @@ body{
   border-color: brown;
   padding-right: 10px;
   padding-left: 10px;
-  margin-right:0;
+  margin-right: 0;
 
 }
 
@@ -60,15 +77,37 @@ body{
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
-  justify-content: flex-start; /* Aligns content to top */
-  padding-top: 2rem; /* Optional: space from top edge */
+  justify-content: flex-start;
+  /* Aligns content to top */
+  padding-top: 2rem;
+  /* Optional: space from top edge */
 }
 
-#heading{
+#heading {
   margin-bottom: 100px;
 }
 
-p{
+p {
   font-size: 30px;
   font-family: "Inconsolata";
+}
+
+.traits {
+  border: 8px solid black;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+#subheading {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+#traitList {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+#listBox {
+  height: 500px;
+  max-width: 200px;
 }
